--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "homepage": "https://github.com/juliandkatz/plangrid-code-test#readme",
   "dependencies": {
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.2"
+  },
+  "standard": {
+    "env": [ "mocha" ]
   }
 }
