--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --exec npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --watch ./index-spec.js"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,13 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.1.2"
+    "mocha": "^6.1.2",
+    "sinon": "^7.3.1",
+    "sinon-chai": "^3.3.0"
   },
   "standard": {
-    "env": [ "mocha" ]
+    "env": [
+      "mocha"
+    ]
   }
 }
