--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --exec npm start",
-    "test": "mocha --watch ./index-spec.js"
+    "test": "NODE_ENV=test mocha --watch ./index-spec.js"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.2",
-    "sinon": "^7.3.1",
-    "sinon-chai": "^3.3.0"
+    "supertest": "^4.0.2"
   },
   "standard": {
     "env": [
