added logging and check for debug environment variable

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon --exec npm start",
+    "dev": "DEBUG=true nodemon --exec npm start",
     "test": "NODE_ENV=test mocha --watch ./index-spec.js"
   },
   "repository": {
